--- a/.jshintrc
+++ b/.jshintrc
@@ -20,5 +20,5 @@
     "smarttabs": true,
     "jquery": true,
     "expr": true,
-    "globals": { "crafter": false }
+    "globals": { "alert": false, "crafter": false }
 }
