--- a/bower.json
+++ b/bower.json
@@ -9,8 +9,9 @@
     "backbone": "~1.1.0",
     "underscore": "~1.5.2",
     "ckeditor": "*",
-    "handlebars": "~1.1.0"
+    "handlebars": "~1.1.0",
+    "jquery-file-upload": "~9.5.4",
+    "uploadify": "~3.2.1"
   },
-  "devDependencies": {},
-  "resolutions": {}
+  "devDependencies": {}
 }
