--- a/bower.json
+++ b/bower.json
@@ -1,16 +1,18 @@
 {
-  "name": "ui",
-  "version": "0.0.0",
-  "dependencies": {
-    "sass-bootstrap": "~3.0.0",
-    "requirejs": "~2.1.8",
-    "modernizr": "~2.6.2",
-    "jquery": "~1.10.2",
-    "backbone": "~1.1.0",
-    "underscore": "~1.5.2",
-    "ckeditor": "*",
-    "handlebars": "~1.1.0"
-  },
-  "devDependencies": {},
-  "resolutions": {}
+    "name": "ui",
+    "version": "0.0.0",
+    "dependencies": {
+        "sass-bootstrap": "~3.0.0",
+        "requirejs": "~2.1.8",
+        "modernizr": "~2.6.2",
+        "jquery": "~1.10.2",
+        "backbone": "~1.1.0",
+        "underscore": "~1.5.2",
+        "ckeditor": "*",
+        "handlebars": "~1.1.0",
+        "jquery-file-upload": "~9.5.4",
+        "uploadify": "~3.2.1",
+        "jquery.browser": "~0.0.6"
+    },
+    "devDependencies": {}
 }
