--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <packaging>war</packaging>
 <!--    <parent>
         <groupId>org.craftercms</groupId>
-        <artifactId>crafter-social-parent</artifactId>
+        <artifactId>crafter-comments-parent</artifactId>
         <version>2.5.0-SNAPSHOT</version>
     </parent>-->
     <organization>
